--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,22 +1,23 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.0.7",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.collab-proxy": "2.1.0",
     "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.feature.gameplay-storytelling": "1.0.0",
     "com.unity.feature.worldbuilding": "1.0.1",
-    "com.unity.ide.rider": "3.0.24",
-    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.rider": "3.0.25",
+    "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.render-pipelines.high-definition": "12.1.12",
-    "com.unity.render-pipelines.high-definition-config": "12.1.12",
-    "com.unity.render-pipelines.universal": "12.1.12",
-    "com.unity.shadergraph": "12.1.12",
+    "com.unity.render-pipelines.high-definition": "14.0.9",
+    "com.unity.render-pipelines.high-definition-config": "14.0.9",
+    "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.shadergraph": "14.0.9",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.5",
+    "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.0",
+    "com.unity.visualscripting": "1.9.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
