--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,23 +1,23 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.ai.navigation": "2.0.0",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.feature.gameplay-storytelling": "1.0.0",
     "com.unity.feature.worldbuilding": "1.0.1",
-    "com.unity.ide.rider": "3.0.26",
+    "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
-    "com.unity.render-pipelines.high-definition": "15.0.7",
-    "com.unity.render-pipelines.high-definition-config": "15.0.7",
-    "com.unity.render-pipelines.universal": "15.0.7",
-    "com.unity.shadergraph": "15.0.7",
+    "com.unity.render-pipelines.high-definition": "16.0.5",
+    "com.unity.render-pipelines.high-definition-config": "16.0.5",
+    "com.unity.render-pipelines.universal": "16.0.5",
+    "com.unity.shadergraph": "16.0.5",
     "com.unity.test-framework": "1.3.9",
-    "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.1",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
